[package]
name    = "auction-contract"
version = "0.1.0"
edition = "2021"

# Build as a WebAssembly library for Stellar
[lib]
crate-type = ["cdylib"]

# Main dependency — Soroban smart contract SDK
[dependencies]
soroban-sdk = "20.0.0"

# Extra testing tools (only used when running tests)
[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

# Release settings — makes the .wasm file as small as possible
[profile.release]
opt-level        = "z"
overflow-checks  = true
debug            = 0
strip            = "symbols"
debug-assertions = false
panic            = "abort"
codegen-units    = 1
lto              = true